Changed carousel slides back to all absolute so we don't get flickering between slides. Healt with height issue with an on scroll height adjuster to match the image offsetHeight. Works ok but not sure, probably should just change it into a button that opens the crack instead.

--- a/_src/scss/modules/_body.scss
+++ b/_src/scss/modules/_body.scss
@@ -96,9 +96,10 @@ footer {
   @extend %no-select;
   @include zigzag(top);
   @include zigzag(bottom);
-  // height: 100px;
+  height: 100px;
   padding-top: 20px;
 
+  @include single-transition(height 0.3s ease);
   @include respond($screen-sm) {
     padding-top: 0;
   }
@@ -175,14 +176,13 @@ footer {
 .showcase-slide {
   height: 100%;
   position: absolute;
-  visibility: hidden;
+  // visibility: hidden;
   @include transform-transition();
 
   // default hidden to right
   @include transform2d(translateX(100%));
 
   &.active {
-    position: relative;
     visibility: visible;
     @include transform2d(translateX(0));
   }
